--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "node": "12.14.0"
     },
     "dependencies": {
+        "axios": "^0.19.2",
         "bcrypt": "^4.0.1",
         "body-parser": "^1.19.0",
         "cors": "^2.8.5",
