--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,1 +1,13 @@
-version: 3.6
+version: "3.6"
+
+services:
+    backend:
+        container_name: backend
+        # image: node:12.18.1
+        build: ./
+        command: npm start
+        working_dir: /usr/src/doblevia-backend
+        ports: 
+            - "3001:3001" 
+        volumes: 
+            - ./:/usr/src/doblevia-backend
