--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,10 @@ services:
         # image: node:12.18.1
         build: ./
         command: npm start
+
         working_dir: /usr/src/doblevia-backend
         ports: 
             - "3001:3001" 
         volumes: 
             - ./:/usr/src/doblevia-backend
+            - /usr/src/doblevia-backend/node_modules
